# jfk-passenger-forecasting

./: .gitignore  README.md  environment.yml  pyproject.toml
data/raw/: weather.csv
data/raw/bts_flights/: download_all.bat  download_all.sh  download_urls.txt
docs/: data_dictionary.md  eda_findings.md  feature_engineering_decisions.md  project_proposal.md  rq3_ablation_design.md  rq4_importance_design.md  work_breakdown.md
models/: feature_sets.json
notebooks/: 01_data_preprocessing.ipynb  02_feature_engineering.ipynb
src/data/: download_bts_flights.py
